--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.7",
     "@supabase/supabase-js": "^2.91.0",
-    "next": "16.1.4",
+    "@vercel/blob": "^2.0.1",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
