--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.7",
     "@supabase/supabase-js": "^2.91.0",
     "@vercel/blob": "^2.0.1",
+    "@vercel/speed-insights": "^1.3.1",
     "leaflet": "^1.9.4",
     "next": "^16.1.6",
     "react": "19.2.3",
